Change css to autohide scrollbars. Closes issue #128

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   text-align: left;
-  overflow: scroll;
+  overflow: auto;
 }
 h1 {
   border-bottom: 1px solid #1d4088;
